# ArffPar

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
modules/: CMakeLists.txt
modules/MainModule/: CMakeLists.txt
modules/MainModule/include/: arff_parr.hpp  integer_variable.hpp  real_variable.hpp  settings.hpp  tools.hpp  variable.hpp
modules/MainModule/include/DataStructures/: data_model.hpp  enum_variable.hpp  example.hpp  integer_variable.hpp  real_variable.hpp  text_variable.hpp  variable.hpp
modules/MainModule/src/: #main.cpp#  arff_parr.cpp  main.cpp  tools.cpp  variable.cpp
modules/MainModule/src/DataStructures/: data_model.cpp  enum_variable.cpp  example.cpp  integer_variable.cpp  real_variable.cpp  text_variable.cpp  variable.cpp
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: configurations.xml  launcher.properties  private.xml
